--- a/exampleconfig.json
+++ b/exampleconfig.json
@@ -5,5 +5,9 @@
         "!",
         "&"
     ],
+    "REDIS": {
+        "url": "redis://localhost:6379",
+        "password": "YOUR_REDIS_PASSWORD"
+    },
     "DATABASE": "DB_URL"
 }
