--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "cron": "2.1.0",
     "discord.js": "13.12.0",
     "prisma": "4.6.1",
-    "tracer": "1.1.6"
+    "tracer": "1.1.6",
+    "redis": "4.5.0"
   },
   "devDependencies": {
     "@types/cron": "2.0.0",
